--- a/styles.css
+++ b/styles.css
@@ -254,10 +254,15 @@ nav {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.room__card__image {
+.room__card__image img {
   position: relative;
   isolation: isolate;
+  width: 100%;
+  height: 200px; /* Adjust the height as needed */
+  object-fit: cover; /* Ensures the image covers the entire space */
+  display: flex;
 }
+
 
 .room__card__icons {
   position: absolute;
@@ -323,7 +328,7 @@ nav {
 }
 
 .service {
-  background-image: url("assets/service.jpg");
+  background-image: url("asset/service.jpeg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
